test/errors/type/collections/set/__gt.yasl
echo collections.set().__gt(collections.set(), true)
